syntax = "proto3";

message PlayerInfo
{
	uint32 id = 1;
	uint32 actor_id = 2;
}

message GamePlayerInfos
{
	repeated PlayerInfo player_infos = 1;
}
